# bobbycar-boardcomputer-firmware-rewrite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  export.sh  generate-icons.sh  open_ide.sh  partitions.csv  rgb565_cpp_template.txt  rgb565_h_template.txt  sdkconfig.defaults
configs/: config_default.cmake  sdkconfig_default
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/can/: can.cpp  can.h  unifiedmodelmode.cpp  unifiedmodelmode.h
main/config/: config.cpp  config.h  configwrapper_bobby.cpp  configwrapper_bobby.h  profile.h
main/driving_modes/: controllers.cpp  controllers.h  modeinterface.h  original.cpp  original.h
main/tasks/: taskmanager.cpp  taskmanager.h
main/utils/: bobbyschedulertask.h
tools/: bobby-app-flash  bobby-coredump  bobby-flash  bobby-flash-flasher  bobby-monitor  bobby-monitor-flasher  open_ide  source-if-not-sourced
